added material icons, moved fonts/ folder to css/

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
-@font-face {font-family: "Roboto"; src: url("../fonts/Roboto-Regular.ttf"); }
-@font-face {font-family: "Roboto Condensed"; src: url("../fonts/RobotoCondensed-Regular.ttf"); }
-@font-face {font-family: "Roboto Slab"; src: url("../fonts/RobotoSlab-Regular.ttf"); }
-@font-face {font-family: "Roboto Mono"; src: url("../fonts/RobotoMono-Regular.ttf"); }
+@font-face {font-family: "Roboto"; src: url("fonts/Roboto-Regular.ttf"); }
+@font-face {font-family: "Roboto Condensed"; src: url("fonts/RobotoCondensed-Regular.ttf"); }
+@font-face {font-family: "Roboto Slab"; src: url("fonts/RobotoSlab-Regular.ttf"); }
+@font-face {font-family: "Roboto Mono"; src: url("fonts/RobotoMono-Regular.ttf"); }
 *, html, body {
 	font-family: "Roboto", "Arial";
 }
